[package]
name = "polarity-lang-transformations"

# Inherited from workspace Cargo.toml
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
url = "2"
# error handling
miette = { workspace = true }
thiserror = { workspace = true }
derivative = { workspace = true }
# workspace members
polarity-lang-ast = { path = "../ast" }
polarity-lang-miette-util = { path = "../miette_util" }
