[package]
name = "polarity-lang-transformations"

# Inherited from workspace Cargo.toml
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
derivative = { workspace = true }
miette     = { workspace = true }
thiserror  = { workspace = true }
url        = { workspace = true }

# workspace dependencies
polarity-lang-ast         = { path = "../ast" }
polarity-lang-miette-util = { path = "../miette_util" }
