[package]
name = "unifier"
version = "0.1.0"
edition = "2021"

[dependencies]
# fancy error messages
miette = "5"
thiserror = "1"
# workspace members
tracer = { path = "../../util/tracer" }
syntax = { path = "../syntax" }
printer = { path = "../printer" }
normalizer = { path = "../normalizer" }
miette_util = { path = "../../util/miette_util" }
