[package]
name = "xfunc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# source code locations
codespan = "0.11"
# fancy error messages
miette = "5"
thiserror = "1"
# workspace members
syntax = { path = "../syntax" }
