[package]
name = "xfunc"

# Inherited from workspace Cargo.toml
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
codespan = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }
# workspace members
ast = { path = "../ast" }
