[package]
name = "test-runner"
version = "0.1.0"
edition = "2024"

autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap         = { workspace = true, features = ["derive"] }
env_logger   = { workspace = true }
log          = { workspace = true }
miette       = { workspace = true, features = ["fancy"] }
tantivy      = { workspace = true }
termcolor    = { workspace = true }
tokio        = { workspace = true, features = ["rt-multi-thread"] }
toml         = { workspace = true }
serde        = { workspace = true }
serde_derive = { workspace = true }
url          = { workspace = true }
walkdir      = { workspace = true }

# workspace members
polarity-lang-ast        = { workspace = true }
polarity-lang-driver     = { workspace = true }
polarity-lang-elaborator = { workspace = true }
polarity-lang-parser     = { workspace = true }
polarity-lang-printer    = { workspace = true }

[[test]]
name = "integration"
path = "src/main.rs"
harness = false
