[package]
name = "test-runner"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

publish = false
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap         = { workspace = true, features = ["derive"] }
env_logger   = { workspace = true }
log          = { workspace = true }
miette       = { workspace = true }
tantivy      = { workspace = true }
termcolor    = { workspace = true }
tokio        = { workspace = true, features = ["rt-multi-thread"] }
toml         = { workspace = true }
serde        = { workspace = true }
serde_derive = { workspace = true }
url          = { workspace = true }
walkdir      = { workspace = true }

# workspace members
polarity-lang-ast        = { workspace = true }
polarity-lang-driver     = { workspace = true }
polarity-lang-elaborator = { workspace = true }
polarity-lang-parser     = { workspace = true }
polarity-lang-printer    = { workspace = true }

[[test]]
name = "integration"
path = "src/main.rs"
harness = false
