[package]
name = "lsp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# lsp
lsp = { version = "0.93", package = "lsp-types" }
tower-lsp = { version = "0.17", default-features = false, features = ["runtime-agnostic"] }
# asynchronous locks
async-lock = "2"
# source code spans
codespan = "0.11"
# fancy error messages
miette = "5"
# workspace members
source = { path = "../../lang/source" }
data = { path = "../data" }
miette_util = { path = "../miette_util" }
