[package]
name = "lsp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# lsp
lsp = { version = "0.93", package = "lsp-types" }
tower-lsp = { version = "0.17", default-features = false, features = ["runtime-agnostic"] }
# asynchronous locks
async-lock = "2"
# source code spans
codespan = { git = "https://github.com/polarity-lang/codespan.git", rev = "542320ab177fd38fff3a398a97b3f0352e065149"}
# fancy error messages
miette = "5"
# workspace members
syntax = { path = "../../lang/syntax" }
query = { path = "../../lang/query" }
printer = { path = "../../lang/printer" }
miette_util = { path = "../miette_util" }
