[package]
publish = false
edition = "2021"
name = "lsp-browser"
version = "0.0.0"

[features]
default = ["tower-lsp/runtime-agnostic"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# async
async-trait = "0.1"
futures = "0.3"
tower-lsp = { git = "https://github.com/tower-lsp/tower-lsp", rev = "19f5a87810ff4b643d2bc394e438450bd9c74365", default-features = false }
# web platform
console_error_panic_hook = "0.1"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = { version = "0.4", features = [
  "futures-core-03-stream",
] }
wasm-streams = "0.2"
# fetch sources
reqwest = { version = "0.12" }
# workspace
lsp-server = { path = "../../../lang/lsp" }
driver = { path = "../../../lang/driver" }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Window",
  "Location",
  "HtmlTextAreaElement",
  "ReadableStream",
  "WritableStream",
]
