[package]
publish = false
edition = "2024"
name = "lsp-browser"
version = "0.0.0"

[features]
default = ["tower-lsp-server/runtime-agnostic"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# async
async-trait = "0.1"
futures = "0.3"
tower-lsp-server = { workspace = true }
# web platform
console_error_panic_hook = "0.1"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = { version = "0.4", features = [
  "futures-core-03-stream",
] }
wasm-streams = "0.2"
# logging
log = "0.4"
console_log = "1"
# fetch sources
reqwest = { version = "0.12" }
# workspace
polarity-lang-lsp-server = { path = "../../../lang/lsp" }
polarity-lang-driver = { path = "../../../lang/driver" }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Window",
  "Location",
  "HtmlTextAreaElement",
  "ReadableStream",
  "WritableStream",
]
