[package]
name = "polarity-lang-lsp-wasm"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

publish = false

[features]
default = ["tower-lsp-server/runtime-agnostic"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait              = { workspace = true }
console_error_panic_hook = { workspace = true }
console_log              = { workspace = true }
futures                  = { workspace = true }
js-sys                   = { workspace = true }
log                      = { workspace = true }
reqwest                  = { workspace = true }
tower-lsp-server         = { workspace = true }
wasm-bindgen             = { workspace = true }
wasm-bindgen-futures     = { workspace = true, features = [
  "futures-core-03-stream",
] }
wasm-streams             = { workspace = true }
web-sys                  = { workspace = true, features = [
  "console",
  "Window",
  "Location",
  "HtmlTextAreaElement",
  "ReadableStream",
  "WritableStream",
] }

# workspace dependencies
polarity-lang-driver     = { workspace = true }
polarity-lang-lsp-server = { workspace = true }
